Bug 251606 - [JSC][armv7] Fix wasm ref.as_non_null
Summary: [JSC][armv7] Fix wasm ref.as_non_null
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-02 10:06 PST by Joseph Griego
Modified: 2023-02-07 07:18 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joseph Griego 2023-02-02 10:06:20 PST
This instruction's current implementation triggers assertion failures in both LLInt and air backends.

Patch forthcoming
Comment 1 Joseph Griego 2023-02-02 10:39:57 PST
Pull request: https://github.com/WebKit/WebKit/pull/9538
Comment 2 EWS 2023-02-07 07:17:38 PST
Committed 259958@main (6055ee639258): <https://commits.webkit.org/259958@main>

Reviewed commits have been landed. Closing PR #9538 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-02-07 07:18:17 PST
<rdar://problem/105127438>